product section fixed the horizontal scroll

--- a/scss/products.scss
+++ b/scss/products.scss
@@ -2,10 +2,6 @@
 @use "header";
 @use "footer";
 
-img {
-  width: 100%;
-}
-
 .cat_menu_btn {
   cursor: pointer;
 }
@@ -20,7 +16,6 @@ img {
 }
 
 #filter {
-  width: 100%;
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr;
@@ -55,6 +50,7 @@ img {
 }
 
 .cover_img {
+  width: 100%;
   height: 300px;
   object-fit: cover;
 }
@@ -119,10 +115,12 @@ img {
 }
 
 #bread_section {
+  width: 100%;
   display: grid;
 }
 
 #cheese_section {
+  width: 100%;
   display: none;
 }
 
